fixed alignment issue and added links

--- a/src/sections/Hero/hero.scss
+++ b/src/sections/Hero/hero.scss
@@ -39,10 +39,13 @@ p {
 .hero_btn {
     line-height: normal;
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 
 .hero_link {
     padding: 15px 20px !important;
+    margin: 0 10px;
     width: 200px;
     font-size: 1.2rem !important;
     font-weight: 600 !important;
